Try modifying tomcat opts.